fix css align

--- a/scss/michael-lefebvre.scss
+++ b/scss/michael-lefebvre.scss
@@ -234,6 +234,7 @@ body {
   h3 {
     font-size: 20px;
     line-height: 30px;
+    text-align: left;
   }
 
   h3 i { font-size: 30px }
